[gd_scene load_steps=17 format=3 uid="uid://c7d15rdw58ufn"]

[ext_resource type="Texture2D" uid="uid://lryglb2500wn" path="res://Images/Mobs/Bug/Fly/Fly1.png" id="1_86wfh"]
[ext_resource type="Script" path="res://Mobs/bug.gd" id="1_pneug"]
[ext_resource type="Texture2D" uid="uid://bdea8prbh0ony" path="res://Images/Mobs/Bug/Fly/Fly2.png" id="2_monnk"]
[ext_resource type="Texture2D" uid="uid://dylpt2spyr3ra" path="res://Images/Mobs/Bug/Death/Death1.png" id="2_ty3dr"]
[ext_resource type="Texture2D" uid="uid://bs536dwreslbw" path="res://Images/Mobs/Bug/Death/Death2.png" id="3_6j043"]
[ext_resource type="Texture2D" uid="uid://bbbyfoyrw4wwb" path="res://Images/Mobs/Bug/Fly/Fly3.png" id="3_g0ven"]
[ext_resource type="Texture2D" uid="uid://coloyw75agcbp" path="res://Images/Mobs/Bug/Fly/Fly4.png" id="4_ebqox"]
[ext_resource type="Texture2D" uid="uid://m5voob04eqto" path="res://Images/Mobs/Bug/Death/Death3.png" id="4_ys0wo"]
[ext_resource type="Texture2D" uid="uid://boofc4mf5tfgd" path="res://Images/Mobs/Bug/Death/Death4.png" id="5_7f5lo"]
[ext_resource type="Texture2D" uid="uid://dy7mu6l2gvtar" path="res://Images/Mobs/Bug/Death/Death5.png" id="6_r6ipn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_y0kor"]
radius = 21.0
height = 42.0

[sub_resource type="SpriteFrames" id="SpriteFrames_naqxb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_ty3dr")
}, {
"duration": 1.0,
"texture": ExtResource("3_6j043")
}, {
"duration": 1.0,
"texture": ExtResource("4_ys0wo")
}, {
"duration": 1.0,
"texture": ExtResource("5_7f5lo")
}, {
"duration": 1.0,
"texture": ExtResource("6_r6ipn")
}],
"loop": false,
"name": &"Death",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_86wfh")
}, {
"duration": 1.0,
"texture": ExtResource("2_monnk")
}, {
"duration": 1.0,
"texture": ExtResource("3_g0ven")
}, {
"duration": 1.0,
"texture": ExtResource("4_ebqox")
}],
"loop": true,
"name": &"Fly",
"speed": 12.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ehhh5"]
radius = 521.116

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kqc1q"]
size = Vector2(26, 5.5)

[sub_resource type="CircleShape2D" id="CircleShape2D_vt7ng"]
radius = 17.0

[sub_resource type="CircleShape2D" id="CircleShape2D_if717"]
radius = 24.0208

[node name="Bug" type="CharacterBody2D"]
script = ExtResource("1_pneug")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(1.36, 0.84)
shape = SubResource("CapsuleShape2D_y0kor")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="CollisionShape2D"]
scale = Vector2(0.0772059, 0.125)
sprite_frames = SubResource("SpriteFrames_naqxb")
animation = &"Death"
autoplay = "Fly"

[node name="PlayerDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetection"]
shape = SubResource("CircleShape2D_ehhh5")

[node name="PlayerDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeath"]
position = Vector2(0, -17.25)
shape = SubResource("RectangleShape2D_kqc1q")

[node name="PlayerCollision" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerCollision"]
scale = Vector2(1.69, 1.005)
shape = SubResource("CircleShape2D_vt7ng")

[node name="DamageDetection" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageDetection"]
scale = Vector2(1.3, 0.88)
shape = SubResource("CircleShape2D_if717")

[connection signal="body_entered" from="PlayerDetection" to="." method="_on_player_detection_body_entered"]
[connection signal="body_entered" from="PlayerDeath" to="." method="_on_player_death_body_entered"]
[connection signal="body_entered" from="PlayerCollision" to="." method="_on_player_collision_body_entered"]
[connection signal="body_entered" from="DamageDetection" to="." method="_on_damage_detection_body_entered"]
